--- a/src/templates/header.html
+++ b/src/templates/header.html
@@ -1,21 +1,22 @@
 <header id="header" class="header">
     <div class="container">
         <div class="header__inner">
-            <div class="header__logo">
-                <img src="/images/logo.svg" alt="logo">
+            <div class="header__logo-track">
+                <div class="header__logo">
+                    <img src="/images/logo.svg" alt="logo">
+                </div>
             </div>
             <div class="header__menu">
-                <div class="header__theme-switcher">
-                    <input type="checkbox" id="theme-toggle" class="header__theme-toggle" aria-label="Toggle theme" checked>
-                    <label for="theme-toggle" class="header__theme-switcher-label">
+                <button class="header__theme-switcher" id="theme-toggle" aria-label="Toggle theme">
+                    <span class="header__theme-switcher-label">
                         <span class="header__theme-switcher-icon header__theme-switcher-icon--moon">
                             <img src="/images/moon.svg" alt="Dark theme">
                         </span>
                         <span class="header__theme-switcher-icon header__theme-switcher-icon--sun">
                             <img src="/images/sun.svg" alt="Light theme">
                         </span>
-                    </label>
-                </div>
+                    </span>
+                </button>
                 <button class="header__menu-button">
                     Join waitlist
                 </button>
