--- a/src/styles/layout/_wallet.scss
+++ b/src/styles/layout/_wallet.scss
@@ -116,6 +116,21 @@
         width: 55%;
         margin: 0 auto;
 
+        &.light {
+            display: none;
+        }
+
+        [data-theme="light"] & {
+            &.dark {
+                display: none;
+            }
+
+            &.light {
+                display: block;
+            }
+        }
+
+
         img {
             width: 100%;
             height: 100%;
@@ -215,6 +230,20 @@
         width: 50%;
         margin: 0 auto;
         @include adaptive-value("margin-bottom", 50, 30, 1);
+
+        &.light {
+            display: none;
+        }
+
+        [data-theme="light"] & {
+            &.dark {
+                display: none;
+            }
+
+            &.light {
+                display: block;
+            }
+        }
     }
 
     &__text {
@@ -360,6 +389,15 @@
             width: 55%;
         }
 
+        &.light {
+            display: none;
+        }
+
+        [data-theme="light"] & {
+            &.dark {
+                display: none;
+            }
+        }
         img {
             width: 100%;
             height: 100%;
