--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -48,4 +48,7 @@ $media-expressions: (
 @import 'layout/future';
 @import 'layout/swipe';
 @import 'layout/wallet';
+@import 'layout/meet';
 @import 'layout/footer';
+
+@import 'animate.css';
