Update sections with animation classes for enhanced user engagement; add new light mode images for improved visual consistency across various components.

--- a/src/styles/layout/_wallet.scss
+++ b/src/styles/layout/_wallet.scss
@@ -397,6 +397,10 @@
             &.dark {
                 display: none;
             }
+
+            &.light {
+                display: block;
+            }
         }
         img {
             width: 100%;
