Refactor waitlist button implementation to use a data attribute for improved scalability; update event listener setup in main.js to handle multiple buttons across sections.

--- a/src/templates/header.html
+++ b/src/templates/header.html
@@ -17,7 +17,7 @@
                         </span>
                     </span>
                 </button>
-                <button class="header__menu-button">
+                <button class="header__menu-button" data-join-waitlist>
                     Join waitlist
                 </button>
             </div>
