Update fees section with new titles and responsive text; adjust icon sizes in SCSS for better layout across devices; enhance media queries for improved mobile display.

--- a/src/styles/layout/_mention.scss
+++ b/src/styles/layout/_mention.scss
@@ -79,6 +79,13 @@
         font-weight: 500;
         line-height: 120%;
         color: $gray;
+        
+        @include media ("<phone") {
+            max-width: 315px;
+            width: 100%;
+            margin: 0 auto;
+            text-align: center;
+        }
     }
 
     &__img {
