--- a/src/styles/layout/_content-block.scss
+++ b/src/styles/layout/_content-block.scss
@@ -57,8 +57,6 @@
 
     &__icon {
         position: absolute;
-        width: 99px;
-        height: 99px;
         border-radius: 50%;
         border: 2px solid #FA5EB5;
         display: flex;
@@ -87,6 +85,9 @@
             bottom: 13%;
             left: 25%;
 
+            width: 106px;
+            height: 106px;
+
             @include media ("<tablet") {
                 display: none;
             }
@@ -96,9 +97,17 @@
             top: 8%;
             right: 20%;
 
+            width: 120px;
+            height: 120px;
+
             @include media ("<tablet") {
                 top: 15%;
                 right: 5%;
+            }
+
+            @include media ("<phone") {
+                width: 76px;
+                height: 76px;
             }
         }
 
@@ -106,9 +115,17 @@
             bottom: 10%;
             right: 6%;
 
+            width: 113px;
+            height: 113px;
+
             @include media ("<tablet") {
                 right: 62%;
                 bottom: 9%;
+            }
+
+            @include media ("<phone") {
+                width: 76px;
+                height: 76px;
             }
         }
 
@@ -116,9 +133,17 @@
             top: 13%;
             left: 9%;
 
+            width: 98px;
+            height: 98px;
+
             @include media ("<tablet") {
                 top: 5%;
                 left: 15%;
+            }
+
+            @include media ("<phone") {
+                width: 64px;
+                height: 64px;
             }
         }
     }
