--- a/src/styles/layout/_fees.scss
+++ b/src/styles/layout/_fees.scss
@@ -16,7 +16,7 @@
         height: auto;
         z-index: -1;
 
-                
+
         @include media ("<tablet") {
             height: 364px;
             object-fit: cover;
@@ -30,9 +30,22 @@
         line-height: 120%;
         letter-spacing: -1.5px;
         text-align: center;
-        margin-bottom: 5px;
         color: transparent;
         @include gradient-text;
+
+        &.mob {
+            display: none;
+
+            @include media ("<phone") {
+                display: block;
+            }
+        }
+
+        &.desk {
+            @include media ("<phone") {
+                display: none;
+            }
+        }
     }
 
     &__img {
@@ -84,6 +97,36 @@
         color: #E8E8E8;
 
         [data-theme="light"] & {
+            color: $gray;
+        }
+
+        &.mob {
+            display: none;
+
+            @include media ("<phone") {
+                display: block;
+            }
+        }
+
+        &.desk {
+            @include media ("<phone") {
+                display: none;
+            }
+        }
+
+        &.top-text {
+            @include adaptive-value("font-size", 22, 16, 1);
+            color: #E8E8E8;
+            max-width: 280px;
+            width: 100%;
+            margin: 0 auto 8px auto;
+
+            [data-theme="light"] & {
+                color: $black-text;
+            }
+        }
+
+        &.bottom-text {
             color: $gray;
         }
     }
