Add launch section with corresponding HTML, SCSS, and images; include new icons and promotional graphics for the PinkWallet launch campaign.

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -49,6 +49,7 @@ $media-expressions: (
 @import 'layout/swipe';
 @import 'layout/wallet';
 @import 'layout/meet';
+@import 'layout/launch';
 @import 'layout/footer';
 
 @import 'animate.css';
