--- a/src/styles/layout/_header.scss
+++ b/src/styles/layout/_header.scss
@@ -98,11 +98,19 @@
         box-shadow: 0px 4px 23.2px 0px #FA5EB582;
         position: relative;
         overflow: hidden;
-        transition: var(--transition-speed);
+        transition: background 0.6s cubic-bezier(0.4, 0, 0.2, 1),
+                    color 0.6s cubic-bezier(0.4, 0, 0.2, 1),
+                    box-shadow 0.6s cubic-bezier(0.4, 0, 0.2, 1);
 
         [data-theme="light"] & {
             background: linear-gradient(0deg, rgba(255, 255, 255, 0.1), rgba(255, 255, 255, 0.1)),
                 linear-gradient(142.93deg, #FFB2EB 15.16%, #FF51D3 95.7%);
+        }
+
+        &.change-bg {
+            color: $black-text;
+            background: linear-gradient(125.79deg, #8C421D 0.58%, #FBE67B 32.51%, #FCFBE7 53.14%, #F7D14E 76.15%, #D4A041 98.73%);
+            box-shadow: 0px 4px 23.2px 0px rgba(212, 160, 65, 0.5);
         }
 
         @include media ("<phone") {
