--- a/src/styles/layout/_launch.scss
+++ b/src/styles/layout/_launch.scss
@@ -2,6 +2,45 @@
     padding: 20px 0;
     text-align: center;
 
+    .container {
+        position: relative;
+        padding-top: 70px;
+        padding-bottom: 70px;
+        padding-left: 110px;
+        padding-right: 110px;
+        @include adaptive-value("padding-right", 110, 30, 1);
+        @include adaptive-value("padding-left", 110, 30, 1);
+        @include adaptive-value("padding-bottom", 70, 40, 1);
+        @include adaptive-value("padding-top", 70, 40, 1);
+
+        // @include media ("<phone") {
+        //     padding-top: 40px;
+        //     padding-bottom: 40px;
+        //     padding-left: 30px;
+        //     padding-right: 30px;
+        // }
+    }
+
+    &__content {
+        padding: 60px 15px;
+        background-color: white;
+    }
+
+    &__frame {
+        position: absolute;
+        top: 10px;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        z-index: -1;
+    }
+
+    img {
+        width: 100%;
+        height: 100%;
+        // object-fit: cover;
+    }
+
     &__sublabel {
         font-weight: 500;
         line-height: 120%;
