--- a/src/templates/header.html
+++ b/src/templates/header.html
@@ -17,9 +17,15 @@
                         </span>
                     </span>
                 </button>
-                <button class="header__menu-button" data-join-waitlist>
-                    Join waitlist
-                </button>
+                <div class="header__menu-buttons-wrapper">
+                    <button class="header__menu-button" data-join-waitlist>
+                        Join waitlist
+                    </button>
+                    <a href="#" target="_blank" class="header__menu-link">
+                        <img src="/images/launch-icon-5.svg" alt="image not found">
+                        <span>Win 0.33 BTC</span>
+                    </a>
+                </div>
             </div>
         </div>
     </div>
