Update launch section styles to change background color from white to a secondary variable for improved visual consistency.

--- a/src/styles/layout/_launch.scss
+++ b/src/styles/layout/_launch.scss
@@ -16,7 +16,7 @@
 
     &__content {
         padding: 60px 15px;
-        background-color: white;
+        background-color: var(--color-bg-secondary);
     }
 
     &__frame {
