--- a/src/styles/layout/_header.scss
+++ b/src/styles/layout/_header.scss
@@ -85,6 +85,12 @@
         position: relative;
         min-width: 150px;
 
+        @include media ("<phone") {
+            order: 3;
+            min-width: 110px;
+            height: 44px;
+        }
+
         &.change-button {
             .header__menu-button {
                 opacity: 0;
@@ -132,9 +138,7 @@
         }
 
         @include media ("<phone") {
-            order: 3;
-            height: 44px;
-            min-width: 110px;
+            height: 100%;
         }
     }
 
@@ -170,8 +174,14 @@
             font-weight: 700;
             line-height: 120%;
             text-align: center;
-            font-size: 16px;
+            @include adaptive-value("font-size", 16, 10, 1);
             text-transform: uppercase;
+        }
+
+
+        @include media ("<phone") {
+            height: 100%;
+            padding: 8px;
         }
     }
 
