--- a/src/styles/base/_typography.scss
+++ b/src/styles/base/_typography.scss
@@ -2,7 +2,7 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap');
 @import url("https://fonts.googleapis.com/css?family=Poppins:100,100italic,200,200italic,300,300italic,regular,italic,500,500italic,600,600italic,700,700italic,800,800italic,900,900italic");
-
+@import url('https://fonts.googleapis.com/css?family=Cookie:regular');
 h1,
 .h1,
 h2,
