--- a/src/styles/layout/_hero.scss
+++ b/src/styles/layout/_hero.scss
@@ -102,6 +102,11 @@
         letter-spacing: -1.5px;
         margin-bottom: 66px;
 
+        i{
+            font-style: normal;
+            font-family: 'Cookie';
+            font-size: 160px;
+        }
 
         @include media ("<desktop") {
             margin-bottom: 265px;
