--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -50,6 +50,7 @@ $media-expressions: (
 @import 'layout/wallet';
 @import 'layout/meet';
 @import 'layout/launch';
+@import 'layout/simple';
 @import 'layout/footer';
 
 @import 'animate.css';
