--- a/src/styles/layout/_launch.scss
+++ b/src/styles/layout/_launch.scss
@@ -19,7 +19,7 @@
         background-color: var(--color-bg-secondary);
 
         @include media ("<phone") {
-            padding: 25px 10px;
+            padding: 25px 8px 40px 8px;
         }
     }
 
@@ -30,11 +30,11 @@
         width: 100%;
         height: 100%;
         z-index: -1;
-    }
 
-    img {
-        width: 100%;
-        height: 100%;
+        img {
+            width: 100%;
+            height: 100%;
+        }
     }
 
     &__sublabel {
@@ -43,7 +43,14 @@
         text-align: center;
         color: $gray;
         @include adaptive-value("margin-bottom", 18, 10, 1);
-        display: inline-block
+        display: inline-block;
+
+        [data-theme="light"] & {
+            background: linear-gradient(278.03deg, #686868 11.66%, #000000 70.92%);
+            color: transparent;
+            -webkit-background-clip: text;
+            background-clip: text;
+        }
     }
 
     &__subtitle {
@@ -159,7 +166,7 @@
         backdrop-filter: blur(10px);
 
         @include media ("<tablet") {
-            padding: 7px 10px;
+            padding: 7px 8px;
             border-radius: 9px;
             gap: 3px;
         }
@@ -210,7 +217,7 @@
         @include adaptive-value("margin-bottom", 60, 40, 1);
 
         @include media ("<phone") {
-            max-width: 290px
+            max-width: 285px
         }
     }
 
