--- a/src/templates/footer.html
+++ b/src/templates/footer.html
@@ -1,28 +1,28 @@
 <footer id="footer" class="footer">
     <div class="container">
         <div class="footer__content">
-            <div class="footer__logo">
+            <div class="footer__logo wow animate__animated animate__fadeInUp">
                 <img src="/images/logo.svg" alt="logo">
             </div>
-            <picture class="footer__pig dark">
+            <picture class="footer__pig dark wow animate__animated animate__fadeInLeft" data-wow-delay="0.2s">
                 <source srcset="/images/footer-pig.webp" type="image/webp">
                 <img src="/images/footer-pig.png" alt="image not found">
             </picture>
-            <picture class="footer__pig light">
+            <picture class="footer__pig light wow animate__animated animate__fadeInLeft" data-wow-delay="0.2s">
                 <source srcset="/images/footer-pig-light.webp" type="image/webp">
                 <img src="/images/footer-pig-light.png" alt="image not found">
             </picture>
             <div class="footer__social">
-                <a href="#" target="_blank" class="footer__social-link">
+                <a href="#" target="_blank" class="footer__social-link wow animate__animated animate__fadeInUp" data-wow-delay="0.3s">
                     <img src="/images/social-icon-1.svg" alt="image not found">
                 </a>
-                <a href="#" target="_blank" class="footer__social-link">
+                <a href="#" target="_blank" class="footer__social-link wow animate__animated animate__fadeInUp" data-wow-delay="0.4s">
                     <img src="/images/social-icon-2.svg" alt="image not found">
                 </a>
-                <a href="#" target="_blank" class="footer__social-link">
+                <a href="#" target="_blank" class="footer__social-link wow animate__animated animate__fadeInUp" data-wow-delay="0.5s">
                     <img src="/images/social-icon-3.svg" alt="image not found">
                 </a>
-                <a href="#" target="_blank" class="footer__social-link">
+                <a href="#" target="_blank" class="footer__social-link wow animate__animated animate__fadeInUp" data-wow-delay="0.6s">
                     <img src="/images/social-icon-4.svg" alt="image not found">
                 </a>
             </div>
