Add new SVG images for creator and creator-light; update footer to include creator link with responsive design. Refactor header for improved layout and remove unused classes for cleaner code.

--- a/src/styles/layout/_footer.scss
+++ b/src/styles/layout/_footer.scss
@@ -94,4 +94,9 @@
         height: 47px;
     }
 
+    &__creator-link {
+        display: block;
+        width:max-content;
+        margin: 30px auto 0 auto;
+    }
 }
