--- a/src/styles/layout/_smart.scss
+++ b/src/styles/layout/_smart.scss
@@ -101,5 +101,13 @@
         @include media ("<tablet") {
             max-width: 285px;
         }
+
+        br{
+            display: none;
+
+            @include media ("<phone") {
+                display: block;
+            }
+        }
     }
 }
