--- a/src/styles/layout/_future.scss
+++ b/src/styles/layout/_future.scss
@@ -118,7 +118,7 @@
     &__title {
         @include gradient-text;
         @include adaptive-value("font-size", 40, 24, 1);
-        font-weight: 600;
+        font-weight: 500;
         line-height: 120%;
         text-align: center;
         @include adaptive-value("margin-bottom", 20, 14, 1);
@@ -143,8 +143,8 @@
         margin: 0 auto;
 
         @include media ("<tablet") {
-            padding: 12px 24px;
             background: #F95DB4CC;
+            padding: 12px 24px;
             border-radius: 999px;
             border: none;
             box-shadow: 0px 4px 23.2px 0px #FA5EB582;
@@ -155,7 +155,7 @@
             }
 
             [data-theme="light"] & {
-                background: $black-bg;
+                background: linear-gradient(0deg, rgba(255, 255, 255, 0.1), rgba(255, 255, 255, 0.1)), linear-gradient(142.93deg, #FFB2EB 15.16%, #FF51D3 95.7%);
                 color: $white-text;
                 box-shadow: none;
             }
