--- a/src/styles/layout/_simple.scss
+++ b/src/styles/layout/_simple.scss
@@ -93,6 +93,14 @@
 
         &.text-1 {
             max-width: 705px;
+
+            br{
+                display: none;
+
+                @include media ("<phone") {
+                    display: block;
+                }
+            }
         }
 
         &.text-2 {
