--- a/src/templates/footer.html
+++ b/src/templates/footer.html
@@ -12,7 +12,7 @@
                 <source srcset="/images/footer-pig-light.webp" type="image/webp">
                 <img src="/images/footer-pig-light.png" alt="image not found">
             </picture>
-            <div class="footer__social">
+            <!-- <div class="footer__social">
                 <a href="#" target="_blank" class="footer__social-link wow animate__animated animate__fadeInUp" data-wow-delay="0.3s">
                     <img src="/images/social-icon-1.svg" alt="image not found">
                 </a>
@@ -25,7 +25,13 @@
                 <a href="#" target="_blank" class="footer__social-link wow animate__animated animate__fadeInUp" data-wow-delay="0.6s">
                     <img src="/images/social-icon-4.svg" alt="image not found">
                 </a>
-            </div>
+            </div> -->
         </div>
+        <a href="https://improvs.com/" target="_blank" class="footer__creator-link">
+            <picture class="footer__creator">
+                <img class="dark" src="/images/creator.svg" alt="image not found">
+                <img class="light" src="/images/creator-light.svg" alt="image not found">
+            </picture>
+        </a>
     </div>
 </footer>
