--- a/src/templates/header.html
+++ b/src/templates/header.html
@@ -1,13 +1,13 @@
-<header id="header" class="header">
+<header id="header" class="header wow animate__animated animate__fadeInDown">
     <div class="container">
         <div class="header__inner">
             <div class="header__logo-track">
-                <div class="header__logo wow animate__animated animate__fadeInLeft">
+                <div class="header__logo ">
                     <img src="/images/logo.svg" alt="logo">
                 </div>
             </div>
             <div class="header__menu">
-                <button class="header__theme-switcher wow animate__animated animate__fadeInDown" id="theme-toggle" aria-label="Toggle theme" data-wow-delay="0.2s">
+                <button class="header__theme-switcher" id="theme-toggle" aria-label="Toggle theme">
                     <span class="header__theme-switcher-label">
                         <span class="header__theme-switcher-icon header__theme-switcher-icon--moon">
                             <img src="/images/moon.svg" alt="Dark theme">
@@ -17,15 +17,9 @@
                         </span>
                     </span>
                 </button>
-                <div class="header__menu-buttons-wrapper">
-                    <button class="header__menu-button wow animate__animated animate__fadeInRight" data-wow-delay="0.3s" data-join-waitlist>
-                        Join waitlist
-                    </button>
-                    <a href="#" target="_blank" class="header__menu-link wow animate__animated animate__fadeInRight" data-wow-delay="0.4s">
-                        <img src="/images/launch-icon-5.svg" alt="image not found">
-                        <span>Win 0.33 BTC</span>
-                    </a>
-                </div>
+                <button class="header__menu-button" data-join-waitlist>
+                    Join waitlist
+                </button>
             </div>
         </div>
     </div>
